Runtime.exec bug fix for movieplayer